# Labs

./: .gitignore  README.md
Dop/: CMakeLists.txt  Dop.cpp
Dop/Circle/: main.cpp
Dop/MyString/: main.cpp
lab1/: CMakeLists.txt  main  main.cpp
lab14/: main.cpp
lab15/: main.cpp
lab2/: CMakeLists.txt  task1  task1.cpp
lab3/: CMakeLists.txt  task1-var9  task1-var9.cpp
lab4 (var9)/: .gitignore  CMakeLists.txt  task1  task1.cpp
lab5/: CMakeLists.txt  task-var9.cpp  task1-var9.cpp
lab6/: CMakeLists.txt  tasks6.cpp
lab7/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
lab7/var1/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
lab8/task1/: CMakeLists.txt  functions.cpp  functions.hpp  input.txt  main.cpp  output.txt
lab8/task2/: functions.cpp  functions.hpp  main.cpp
lab8/task3/: functions.cpp  functions.hpp  input.txt  main.cpp  output.txt
lab9/: main.cpp
test/: test.cpp  test2  test2.cpp
